# zafaliv

./: .gitignore  readme.md
data/: data.py
docker_env/: Dockerfile  eval.py  requirements.txt  train.py
docker_env/data/: dataset.jsonl
fine_tuning/: compare.py  dataset.json  log_avaliacao.json  main.py  pyproject.toml  relatorio_modelos.md  test.py
fine_tuning/data/: gabarito_questoes_3_ano_formatadas.json  questoes_3_ano_formatadas.json
fine_tuning/gemma-2b-autoescola-finetuned/: adapter_config.json
fine_tuning/results/: README.md
fine_tuning/results/checkpoint-39/: adapter_model.safetensors  rng_state.pth  scheduler.pt  trainer_state.json
rag-eval/: generation.py  main.py  pyproject.toml  retrieval.py  vector_db_manager.py
raw_data/: gabarito_8_ano_formatado.json  gabarito_9_ano_formatado.json  gabarito_questoes_olimpiada_ensino_medio_2023.json  questoes_8_ano.json  questoes_8_ano_formatado.json  questoes_9_ano_formatadas.json  questoes_olimpiada_ensino_medio_2023.json  upload_qdrant.py  upload_qdrant_gabarito.py
raw_data/questoes_ciencias/: gabarito.json  questoes_saeb_ciencias.json  upload_gabarito.py  upload_qdrant_questoes.py
raw_data/questoes_ciencias/caderno2/: gabarito.json  questoes_saeb_ciencias_caderno_2.json  rag_science_pipeline.py  test_rag.py  upload_gabarito.py
raw_data/questoes_ciencias/caderno_enceja_2020/: upload_caderno_questoes_enceja.py
raw_data/questoes_markdown/: questoes_8_ano.md
scripts/: build_sft_dataset.py
