[tool.poetry]
name = "fine-tuning"
version = "0.1.0"
description = ""
authors = ["Ulian <ulian.gabriel@aprix.com.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
transformers = "^4.57.6"
datasets = "^4.5.0"
peft = "^0.18.1"
bitsandbytes = "^0.49.1"
trl = "^0.27.0"
accelerate = "^1.12.0"
scipy = "^1.17.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
