[tool.poetry]
name = "rag-eval"
version = "0.1.0"
description = ""
authors = ["Ulian <ulian.gabriel@aprix.com.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ragas = "^0.3.9"
trulens = "^2.5.0"
datasets = "^4.4.1"
sentence-transformers = "^5.1.2"
scikit-learn = "^1.7.2"
numpy = "^2.3.5"
transformers = "^4.57.1"
accelerate = "^1.11.0"
qdrant-client = "^1.16.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
